[Nav Experiment] Handle out-of-order WKNavigationDelegate callback.

For some reason, plus.google.com triggers a WKWebView bug that triggers
|webView:didFinishNavigation| before |webView:didCommitNavigation|
when navigation back to NTP. With WKBasedNavigationManager,
|webView:didFinishNavigation| triggers the presentation of native
content which relies on states updated in |webView:didCommitNavigation|.

Finish-before-commit has been observed before (crbug.com/727289). The
original fix made it possible to call didCommit without crashes after
didFinish has already been called. This is not sufficient for the
WKBasedNavigationManager use case because native controller needs last
committed navigation item to have been updated.

This CL calls didCommit in didFinish if a finish-before-commit scenario
is detected. UMA counters are added to track the frequency to ensure
this is indeed an exceptional case.

Bug: 818796
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I274cc37b494478882b4d8f2a773c33df5b29c703
Reviewed-on: https://chromium-review.googlesource.com/981299
Commit-Queue: Danyao Wang <danyao@chromium.org>
Reviewed-by: Mark Pearson <mpearson@chromium.org>
Reviewed-by: Eugene But <eugenebut@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546950}
Former-commit-id: 12d074a88884b24439b82982960aa4b895ee4946